Ensure bottom of accordion title and button text are aligned

--- a/src/components/details/src/_details.scss
+++ b/src/components/details/src/_details.scss
@@ -14,6 +14,7 @@ $details-caret-width: 1.1rem;
   }
 
   &__title {
+    transform: translateY(-1px);
     margin: 0;
     pointer-events: none;
   }
